hopefully fixed placeholder canvas being wrong size

--- a/styles/blogpost.scss
+++ b/styles/blogpost.scss
@@ -110,6 +110,11 @@
 			transition: opacity 0.5s ease;
 			position: absolute;
 			pointer-events: none;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 100%;
+			height: 100%;
 
 			&.unblur {
 				opacity: 0;
